image bleed bug

--- a/src/components/Login/custom.css
+++ b/src/components/Login/custom.css
@@ -1,4 +1,4 @@
-.container {
+.login .container {
     position: relative;
     background-image: url('../../../public/can-do.gif');
     background-repeat: no-repeat;
@@ -7,12 +7,12 @@
     height: 100%;
 }
 
-.product-page {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: lightgrey;
-    opacity: 0.8;
-}
+/*.product-page {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background-color: lightgrey;*/
+/*    opacity: 0.8;*/
+/*}*/
